build json structure

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <version>1.15.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
     </dependencies>
 
 </project>
